--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,5 +1,5 @@
 // Color ______________________________________________________________________
-$primary-color: #713eff;;
+$primary-color: #713eff;
 $second-color:#4400ff;
 $white: #fff;
 $black: #1b1b1b;
