--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import "_navbar.scss";
 @import "_body.scss";
 @import "_intro.scss";
+@import "_title.scss";
 @import "_project.scss";
 @import "_about.scss";
 @import "_contact.scss";
@@ -12,3 +13,6 @@
 // 900px = iPad Pro
 // 868px = iPad
 // 380px = Phone
+
+
+// box-shadow: #7949fd 5px 5px, #8154ff 10px 10px, #9069fc 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
