--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -3,24 +3,163 @@
 
 .Intro {
   // Spacing
-  padding: 10rem 5rem;
+  padding: 25rem 20rem;
+
+  .Intro-name {
+    // Font
+    font-family: $Playfair;
+    font-size: size(mega-large);
+    font-weight: weight(bold);
+  }
+
+  .Intro-job {
+    // Font
+    font-family: $Playfair;
+    font-size: size(large);
+    font-weight: weight(bold);
+    // Font Color
+    color: $primary-color;
+    // Spacing
+    margin: 1rem 0;
+  }
+
+  .Intro-details {
+    // Font
+    font-family: $Playfair;
+    font-size: size(medium);
+    font-weight: weight(medium);
+    // Spacing
+    margin: 1rem 0;
+
+    // .Intro-detail-city{
+    //   color: $primary-color;
+    // }
+  }
 }
 
+// Laptop Screen Size ---------
 @media (max-width: 1100px) {
   .Intro {
+    padding: 30rem 5rem;
+
+    .Intro-name {
+      // Font
+      font-size: size(super-large);
+      font-weight: weight(bold);
+    }
+
+    .Intro-job {
+      // Font
+      font-size: size(med-large);
+      font-weight: weight(bold);
+      // Spacing
+      margin: 1rem 0;
+    }
+
+    .Intro-details {
+      // Font
+      font-size: size(medium);
+      font-weight: weight(medium);
+      // Spacing
+      margin: 1rem 0;
+    }
   }
 }
 
+// mid-size tablet Screen Size ---------
 @media (max-width: 900px) {
   .Intro {
-  }
-}
-@media (max-width: 868px) {
-  .Intro {
+    // spacing
+    padding: 20rem 4rem;
+    
   }
 }
 
+// iPad / Tablet Screen size ---------
+@media (max-width: 868px) {
+  .Intro {
+    // spacing
+    padding: 20rem 4rem;
+
+    .Intro-name {
+      // Font
+      font-size: size(large);
+      font-weight: weight(bold);
+    }
+
+    .Intro-job {
+      // Font
+      font-size: size(regular);
+      font-weight: weight(bold);
+      // Spacing
+      margin: 1rem 0;
+    }
+
+    .Intro-details {
+      // Font
+      font-size: size(medium);
+      font-weight: weight(medium);
+      // Spacing
+      margin: 1rem 0;
+    }
+  }
+}
+
+// larger Phone Screen ---------
+@media (max-width: 680px) {
+  .Intro {
+    // Spacing
+    padding: 15rem 2rem;
+
+    .Intro-name {
+      // Font
+      font-size: size(med-large);
+      font-weight: weight(bold);
+    }
+
+    .Intro-job {
+      // Font
+      font-size: size(medium);
+      font-weight: weight(bold);
+      // Spacing
+      margin: 1rem 0;
+    }
+
+    .Intro-details {
+      // Font
+      font-size: size(small);
+      font-weight: weight(medium);
+      // Spacing
+      margin: 1rem 0;
+    }
+  }
+}
+
+// Phone Screen Size ---------
 @media (max-width: 380px) {
   .Intro {
+    padding: 15rem 2rem;
+
+    .Intro-name {
+      // Font
+      font-size: size(med-large);
+      font-weight: weight(bold);
+    }
+
+    .Intro-job {
+      // Font
+      font-size: size(medium);
+      font-weight: weight(bold);
+      // Spacing
+      margin: 1rem 0;
+    }
+
+    .Intro-details {
+      // Font
+      font-size: size(small);
+      font-weight: weight(medium);
+      // Spacing
+      margin: 1rem 0;
+    }
   }
 }
