--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -19,7 +19,7 @@
     background: #f1f1f1;
 }
 ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: #4400ff;
 }
 ::selection{
   background: #4400ff;
@@ -69,24 +69,7 @@
 .menu-list li a:hover{
   color: #713eff;
 }
-.banner{
-  background: url("banner.jpg") no-repeat;
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-}
-.about{
-  padding: 30px 0;
-}
-.about .title{
-  font-size: 38px;
-  font-weight: 700;
-}
-.about p{
-  padding-top: 20px;
-  text-align: justify;
-}
+
 .icon{
   color: #1b1b1b;
   font-size: 20px;
@@ -98,33 +81,37 @@
   right: 30px;
   top: 20px;
 }
+
+// Desktop Screen Size
 @media (max-width: 1230px) {
   .content{
     padding: 0 60px;
   }
 }
+// Laptop Screen Size
 @media (max-width: 1100px) {
   .content{
     padding: 0 40px;
   }
   .menu-list li a{
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500;
-    margin-left: 25px;
-    text-decoration: none;
-    transition: all 0.3s ease;
+    color: #1b1b1b;
   }
 
   .cancel-btn {
     color: #fff;
   }
 }
+// iPad Pro Screen Size
 @media (max-width: 900px) {
   .content{
     padding: 0 30px;
   }
+  .menu-list li a{
+    color: #fff;
+  }
 }
+
+// iPad / Tablet Screen size
 @media (max-width: 868px) {
   body.disabled{
     overflow: hidden;
@@ -145,7 +132,7 @@
     display: block;
     padding: 40px 0;
     text-align: center;
-    background: #222;
+    background: $black;
     transition: all 0.3s ease;
   }
   .navbar.show .menu-list{
@@ -163,6 +150,8 @@
     margin-left: 0px;
   }
 }
+
+// Phone Screen Size
 @media (max-width: 380px) {
   .navbar .logo a{
     font-size: 27px;
