--- a/scss/_title.scss
+++ b/scss/_title.scss
@@ -1,61 +1,56 @@
 @import "_font.scss";
 @import "_variable.scss";
 
-.Project-title {
-  // Spacing
-  padding: 10rem 10rem;
-  // Font Styling
-  font-family: $Playfair;
-  font-size: size(large);
-  font-weight: weight(bold);
-}
-// Laptop Screen Size ---------
-@media (max-width: 1100px) {
-  .Project-title {
-    // Spacing
-    padding: 10rem 5rem 0 5rem;
-    // Font Styling
-    font-size: size(med-large);
-    font-weight: weight(bold);
-  }
-}
-// iPad Pro Screen Size ---------
-@media (max-width: 900px) {
-  .Project-title {
-    // Spacing
-    padding: 10rem 4rem 0 4rem;
-    // Font Styling
-    font-size: size(med-large);
-    font-weight: weight(bold);
-  }
-}
-// iPad / Tablet Screen size ---------
-@media (max-width: 868px) {
-  .Project-title {
-    padding: 10rem 4rem 0 4rem;
-    // Font Styling
-    font-size: size(regular);
-    font-weight: weight(bold);
-  }
-}
+// .Project-title {
+//   // Spacing
+//   padding: 10rem 10rem;
+//   // Font Styling
+//   font-family: $Playfair;
+//   font-size: size(large);
+//   font-weight: weight(bold);
+// }
+// // Laptop Screen Size ---------
+// @media (max-width: 1100px) {
+//   .Project-title {
+//     // Spacing
+    
+//     // Font Styling
+    
+//   }
+// }
+// // iPad Pro Screen Size ---------
+// @media (max-width: 900px) {
+//   .Project-title {
+//     // Spacing
+    
+//     // Font Styling
+    
+//   }
+// }
+// // iPad / Tablet Screen size ---------
+// @media (max-width: 868px) {
+//   .Project-title {
+    
+//     // Font Styling
+   
+//   }
+// }
 
-// larger Phone Screen ---------
-@media (max-width: 680px) {
-  .Project-title {
-    padding: 10rem 2rem 0 2rem;
-    // Font Styling
-    font-size: size(regular);
-    font-weight: weight(bold);
-  }
-}
+// // larger Phone Screen ---------
+// @media (max-width: 680px) {
+//   .Project-title {
+    
+//     // Font Styling
+    
+//   }
+// }
 
-// Phone Screen Size ---------
-@media (max-width: 380px) {
-  .Project-title {
-    // Spacing
-    padding: 8rem 1rem 0 2rem;
-    // Font Styling
-    font-size: 30px;
-    font-weight: weight(bold);
-  }
-}
+// // Phone Screen Size ---------
+// @media (max-width: 380px) {
+//   .Project-title {
+//     // Spacing
+   
+//     // Font Styling
+    
+//   }
+// }
