--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -1,7 +1,12 @@
 // Color ______________________________________________________________________
 $primary-color: #713eff;
-$second-color:#4400ff;
-$white: #fff;
+
+$purple1: #3500D3;
+$purple2: #5A189A;
+$purple3: #7B2CBF;
+$purple4: #C77DFF;
+
+$white: rgb(245, 245, 245);
 $black: #1b1b1b;
 $black2: #2b2b2b;
 
