--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -3,29 +3,81 @@
 
 .Contact {
   // Spacing
-  padding: 20rem 10rem;
+
 }
 // Laptop Screen Size
 @media (max-width: 1100px) {
   .Contact {
-    padding: 10rem 5rem;
+  
   }
 }
 // iPad Pro Screen Size
 @media (max-width: 900px) {
   .Contact {
-    padding: 10rem 5rem;
+
   }
 }
 // iPad / Tablet Screen size
 @media (max-width: 868px) {
   .Contact {
-    padding: 10rem 5rem;
+
   }
 }
+
+@media (max-width: 680px) {
+  .Contact {
+    padding: 10rem 2rem;
+    background: $primary-color;
+    color: $white;
+
+    .Contact-title {
+      padding: 1rem 0;
+      font-size: size(regular);
+    }
+
+    .Contact-description {
+      padding: 0 0 2rem 0;
+      font-size: size(small);
+      font-weight: weight(medium);
+    }
+
+    .Contact-list_div {
+      display: flex;
+        flex-flow: row wrap;
+    }
+    .Contact-icons {
+      padding: 0 1rem 0 0;
+      font-size: size(regular);
+      color: $white;
+    }
+  }
+}
+
 // Phone Screen Size
 @media (max-width: 380px) {
   .Contact {
     padding: 10rem 2rem;
+    background: $primary-color;
+    color: $white;
+
+    .Contact-title {
+      padding: 1rem 0;
+      font-size: size(regular);
+    }
+
+    .Contact-description {
+      padding: 0 0 2rem 0;
+      font-weight: weight(medium);
+    }
+
+    .Contact-list_div {
+      display: flex;
+        flex-flow: row wrap;
+    }
+    .Contact-icons {
+      padding: 0 1rem 0 0;
+      font-size: size(regular);
+      color: $white;
+    }
   }
 }
