--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -4,8 +4,9 @@
 .Intro {
   // Spacing
   padding: 25rem 30rem;
+  color: $white;
   // margin: 25rem 20rem;
-  // background: $purple1;
+  background: $black;
 
   .Intro-name {
     // Font
@@ -93,22 +94,42 @@
 // larger Phone Screen ---------
 @media (max-width: 680px) {
   .Intro {
-    // Spacing
+    text-align: center;
+    padding: 10rem 1rem 10rem;
 
     .Intro-name {
-      // Font
+      // Font/ Text Styling
+      font-family: $Poppins;
+      font-size: size(med-large);
+      font-weight: weight(medium);
+
+      margin: 5rem 0 1rem 0;
+      // padding: 5rem 0;
     }
 
     .Intro-job {
-      // Font
-
+      // Font/ Text Styling
+      font-family: $Poppins;
+      font-size: size(medium);
+      font-weight: weight(medium);
+      color: $primary-color;
       // Spacing
+      margin: 1rem 0rem;
     }
 
     .Intro-details {
-      // Font
+      // Font/ Text Styling
+      font-family: $Poppins;
+      font-size: size(small);
+      font-weight: weight(med-low);
 
       // Spacing
+      margin: 1rem 0rem;
+    }
+    .fa-chevron-down {
+      font-size: size(regular);
+      color: $primary-color;
+      margin: 15rem 0 0 0;
     }
   }
 }
@@ -134,6 +155,7 @@
       font-family: $Poppins;
       font-size: size(medium);
       font-weight: weight(medium);
+      color: $primary-color;
       // Spacing
       margin: 1rem 0rem;
     }
@@ -149,10 +171,8 @@
     }
     .fa-chevron-down {
       font-size: size(regular);
-
+      color: $primary-color;
       margin: 15rem 0 0 0;
-
-      scroll-behavior: smooth;
     }
 
 
